2000-10-03  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Use BounceHandler module; set ISA
	appropriately.

	* lib/Mj/MailOut.pm: Remove bounce handling stuff.

	* lib/Mj/BounceHandler.pm: New file: handle bounces.

	* bin/mj_shell: Add option to dump request and result structures.

	* lib/Majordomo.pm (dispatch): Eliminate warnings when mode is
	empty or contains all non-alphabetics.

2000-10-02  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (dispatch):  Inform on *_done commands.
	Do not inform on *_start commands if they succeed.
	Track the elapsed time taken by a request.

	* lib/Mj/Format.pm (report):  Display the elapsed time
	if one is given.

	* lib/Mj/Inform.pm (inform):  Store the elapsed time of
	the command in the log.
	(_inform_owner)  Include TIME substitution, for the elapsed time.

	* lib/Mj/Log.pm (elapsed):  New routine.  Return the amount
	of time elapsed since the first call to in().

2000-10-02  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_check_mime): Don't fault messages for
        exceeding max_mime_header_length if it is zero.

2000-10-01  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm (_post):  Add support for the "unique"
	class.  Subscribers with this setting will not receive
	a duplicate copy if a message with the same ID or checksum
	has previously been posted to a list in the same domain.

2000-09-30  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Bump version number.

	* lib/Mj/BounceParser.pm (parse_msn): Handle MSN bounces with
	multiline diagnostics.
	(parse_compuserve): Old function moved to parse_compuserve2.  New
	function to parse new bounce format.
	(parse_exim): Look at X-Failed-Recipients: header as well.

	* lib/Mj/SimpleDB/Text.pm: Use Majordomo::_re_match instead of
	local version.  Delete local copy.

	* lib/Majordomo.pm: Declare various undeclared variables.

	* lib/Mj/SimpleDB/DB.pm: Use Majordomo::_re_match for all regexp